--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -3,10 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev --turbopack --port 3000",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "start": "next start --port 3000",
+    "lint": "next lint",
+    "lint:fix": "next lint --fix",
+    "type-check": "tsc --noEmit",
+    "clean": "rm -rf .next && rm -rf node_modules/.cache",
+    "preview": "next build && next start"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.1",
@@ -17,7 +21,7 @@
     "axios": "^1.11.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "lucide-react": "^0.533.0",
+    "lucide-react": "^0.534.0",
     "next": "15.4.4",
     "openai": "^5.10.2",
     "react": "19.1.0",
