--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,11 @@
 {
   "version": 2,
-  "buildCommand": "cd apps/frontend && bun run build",
-  "outputDirectory": "apps/frontend/.next",
+  "buildCommand": "bun run build",
+  "outputDirectory": ".next",
   "installCommand": "bun install",
   "framework": "nextjs",
   "functions": {
-    "apps/frontend/src/app/**": {
+    "src/app/**": {
       "runtime": "@vercel/static"
     }
   },
@@ -32,4 +32,4 @@
       ]
     }
   ]
-} 
+}
