--- a/apps/frontend/env.example
+++ b/apps/frontend/env.example
@@ -1,5 +1,5 @@
 # Frontend Environment Variables
-# Copy this file to .env.local and fill in your values
+# Copy this file to .env and fill in your values
 
 # API URL for backend communication
 # Development
